--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,12 +5,12 @@
   |============================
 */
 /* Common styles */
-@import url('reset.css');
-@import url('base.css');
-@import url('container.css');
+@import url('./reset.css');
+@import url('./base.css');
+@import url('./container.css');
 
 /* Sections style */
-@import url('header.css');
-@import url('welcome.css');
-@import url('01-gallery.css');
-@import url('02-form.css');
+@import url('./header.css');
+@import url('./welcome.css');
+@import url('./01-gallery.css');
+@import url('./02-form.css');
